--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1057,7 +1057,7 @@ A Comic Manager App will hopefully come one day, once time allows.</p>
 <p>Collection</p>
 </li>
 <li>
-<p>Shopping List (with priority setting)</p>
+<p>Shopping List</p>
 </li>
 <li>
 <p><a href="#comic-vine-download-img">Download data from Comic Vine</a></p>
@@ -1172,25 +1172,25 @@ A Comic Manager App will hopefully come one day, once time allows.</p>
 <h3 id="_collection_view_options">Collection View Options</h3>
 <div id="thumbnail-view-img" class="imageblock">
 <div class="content">
-<img src="./images/coma/resized/thumbnail%20view.jpg" alt="thumbnail view" width="800">
+<img src="./images/coma/resized/thumbnail%20view.jpg" alt="thumbnail view" width="1000">
 </div>
 <div class="title">Figure 5. Collection tab with thumbnail view</div>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/coma/resized/full%20table%20width.jpg" alt="full table width" width="800">
+<img src="./images/coma/resized/full%20table%20width.jpg" alt="full table width" width="1000">
 </div>
 <div class="title">Figure 6. Full table width, no thumbnails</div>
 </div>
 <div id="card-view-img" class="imageblock">
 <div class="content">
-<img src="./images/coma/resized/cards%20view.jpg" alt="cards view" width="800">
+<img src="./images/coma/resized/cards%20view.jpg" alt="cards view" width="1000">
 </div>
 <div class="title">Figure 7. Cards View</div>
 </div>
 <div id="tiles-view-img" class="imageblock">
 <div class="content">
-<img src="./images/coma/resized/tiles%20view.jpg" alt="tiles view" width="800">
+<img src="./images/coma/resized/tiles%20view.jpg" alt="tiles view" width="1000">
 </div>
 <div class="title">Figure 8. Tiles View</div>
 </div>
@@ -1244,33 +1244,39 @@ A Comic Manager App will hopefully come one day, once time allows.</p>
 <h3 id="_more_features">More Features</h3>
 <div id="comic-vine-download-img" class="imageblock">
 <div class="content">
-<img src="./images/coma/resized/comic%20vine%20download.jpg" alt="comic vine download" width="600">
+<img src="./images/coma/high%20res/comic%20vine%20download.jpg" alt="comic vine download" width="600">
 </div>
 <div class="title">Figure 10. Downloading data from the Comic Vine API</div>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/coma/resized/edit%20window.jpg" alt="Edit Window">
+<img src="./images/coma/high%20res/edit%20window.jpg" alt="Edit Window">
 </div>
 <div class="title">Figure 11. Edit Window</div>
 </div>
-<div id="lend-list-img" class="paragraph">
-<div class="title">Lend List</div>
-<p><span class="image left"><img src="./images/coma/resized/lend%20list.jpg" alt="Lend List" width="500"></span></p>
+<div id="lend-list-img" class="imageblock left">
+<div class="content">
+<img src="./images/coma/resized/lend%20list.jpg" alt="Lend List" width="500">
 </div>
-<div id="on-action-reminders-img" class="paragraph">
-<div class="title">On-Action Reminders</div>
-<p><span class="image right"><img src="./images/coma/resized/on-action%20reminder.jpg" alt="On-Action Reminder" width="300"></span></p>
+<div class="title">Figure 12. Lend List</div>
 </div>
-<div id="statistics-pie-chart-img" class="paragraph">
-<div class="title">Statistics Pie Chart</div>
-<p><span class="image right"><img src="./images/coma/resized/statistics%20pie%20chart.jpg" alt="Statistics Pie Chart" width="400"></span></p>
+<div id="on-action-reminders-img" class="imageblock left">
+<div class="content">
+<img src="./images/coma/resized/on-action%20reminder.jpg" alt="On-Action Reminder" width="300">
+</div>
+<div class="title">Figure 13. On-Action Reminders</div>
+</div>
+<div id="statistics-pie-chart-img" class="imageblock left">
+<div class="content">
+<img src="./images/coma/resized/statistics%20pie%20chart.jpg" alt="Statistics Pie Chart" width="400">
+</div>
+<div class="title">Figure 14. Statistics Pie Chart</div>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="./images/coma/resized/sql%20db%20sample.jpg" alt="sql db sample" width="500">
 </div>
-<div class="title">Figure 12. Part of the SQL Database design</div>
+<div class="title">Figure 15. Part of the SQL Database design</div>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
@@ -1280,16 +1286,16 @@ A Comic Manager App will hopefully come one day, once time allows.</p>
 <p>An overview of the menus and features of <em>Comic Manager 7</em>.</p>
 </div>
 <div class="paragraph">
-<p><span class="image"><img src="./images/coma/menus/resized/edit%20menu.jpg" alt="Edit Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/marking%20menu.jpg" alt="Marking Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/show%20menu.jpg" alt="Show Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/trade%20menu.jpg" alt="Trade Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/window%20menu.jpg" alt="Window Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/image%20menu.jpg" alt="Image Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/misc%20menu.jpg" alt="Misc Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/select%20menu.jpg" alt="Select Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/view%20menu.jpg" alt="View Menu" width="100"></span>
-<span class="image"><img src="./images/coma/menus/resized/panel%20menu.jpg" alt="Panel Menu" width="100"></span></p>
+<p><span class="image"><img src="./images/coma/menus/originals/edit%20menu.jpg" alt="Edit Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/marking%20menu.jpg" alt="Marking Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/show%20menu.jpg" alt="Show Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/trade%20menu.jpg" alt="Trade Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/window%20menu.jpg" alt="Window Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/image%20menu.jpg" alt="Image Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/misc%20menu.jpg" alt="Misc Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/select%20menu.jpg" alt="Select Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/view%20menu.jpg" alt="View Menu" width="150"></span>
+<span class="image"><img src="./images/coma/menus/originals/panel%20menu.jpg" alt="Panel Menu" width="150"></span></p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
@@ -1350,13 +1356,13 @@ The dirset reference has to have the same name as the dirset file it is referenc
 <div class="content">
 <img src="./images/ARC%20DSR%20example.jpg" alt="ARC DSR example">
 </div>
-<div class="title">Figure 13. Dirset reference file example</div>
+<div class="title">Figure 16. Dirset reference file example</div>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="./images/ARC%20dirsets.jpg" alt="ARC dirsets">
 </div>
-<div class="title">Figure 14. Dirset directory containing all directory settings files</div>
+<div class="title">Figure 17. Dirset directory containing all directory settings files</div>
 </div>
 <div class="paragraph">
 <p>You can specify a different settings file for every directory.
@@ -1519,6 +1525,7 @@ Sel    Index    Language    Old Title       New Title
 [x]    1        deu         Undetermined    German</pre>
 </div>
 </div>
+<div style="page-break-after: always;"></div>
 </div>
 </div>
 </div>
@@ -1549,7 +1556,7 @@ Keep in mind that this is the very first version of the script. So, it&#8217;s s
 <div class="content">
 <img src="./images/Blender%20batch%20renderer%20-%20batch%20file.jpg" alt="Blender batch renderer">
 </div>
-<div class="title">Figure 15. batch.txt</div>
+<div class="title">Figure 18. batch.txt</div>
 </div>
 <div class="paragraph">
 <p>Supported settings:</p>
@@ -1632,13 +1639,14 @@ I used it to create the flickering light in my Half-Life 3 trailer.</p>
 <a class="image" href="https://github.com/julian-boehme/flickeringLight.git"><img src="./images/resized/Download%20from%20GitHub.png" alt="Download from GitHub" width="150"></a>
 </div>
 </div>
+<div style="page-break-after: always;"></div>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-12-10 22:55:42 +0100
+Last updated 2024-02-09 00:51:22 +0100
 </div>
 </div>
 <script src=".\syntax_highlight/highlight.min.js"></script>
